--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,19 @@ set(OPENSSL_ROOT_DIR /opt/homebrew/opt/openssl@3)
 set(OPENSSL_INCLUDE_DIR /opt/homebrew/opt/openssl@3/include)
 set(OPENSSL_LIBRARIES /opt/homebrew/opt/openssl@3/lib)
 
-# Add WebSocket++ to include path
-include_directories(libs)
+set(YAML_CPP_DIR /opt/homebrew/opt/yaml-cpp)
+include_directories(${YAML_CPP_DIR}/include)
+link_directories(${YAML_CPP_DIR}/lib)
 
 find_package(Boost REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(Boost 1.70 REQUIRED COMPONENTS system thread filesystem)
 find_package(OpenSSL REQUIRED)
+
+find_package(yaml-cpp REQUIRED PATHS /opt/homebrew/opt/yaml-cpp)
+
 include_directories(${Boost_INCLUDE_DIRS})
 
-# Add the main.cpp source file
 add_executable(trading_engine src/main.cpp)
 
-# Link required libraries
-# target_link_libraries(trading_engine pthread)
-target_link_libraries(trading_engine pthread ${Boost_LIBRARIES} OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(trading_engine pthread ${Boost_LIBRARIES} OpenSSL::SSL OpenSSL::Crypto yaml-cpp)
